--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,17 @@
 body {
+  background: rgb(11,80,144);
+  background: linear-gradient(90deg, rgba(11,80,144,1) 17%, rgba(5,88,101,1) 57%);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
